--- a/telastcc/navbar.html
+++ b/telastcc/navbar.html
@@ -16,7 +16,7 @@
 <style>
 	body{
 		all: unset;
-		background-color: #b9d8ff;
+		background-color: #72cdfe;
 	}
 </style>
 </head>
@@ -30,6 +30,13 @@
             <i class="bx bx-menu" id="bnt" ></i>
         </div>
         <ul class="nav_list">
+            <li>
+                <a href="checagem_teste.php">
+                    <i class='bx bxs-check-square'></i>
+               <span class="links_name">Checagem</span>
+               </a>
+               <span class="tooltip">Checagem</span>
+           </li>   
             <li>
                  <a href="listaidosos.php">
                     <i class='bx bxs-user'></i>
