--- a/telastcc/navbar.html
+++ b/telastcc/navbar.html
@@ -31,7 +31,7 @@
         </div>
         <ul class="nav_list">
             <li>
-                <a href="checagem_teste.php">
+                <a href="checagem.php">
                     <i class='bx bxs-check-square'></i>
                <span class="links_name">Checagem</span>
                </a>
@@ -60,7 +60,7 @@
             </li>  
             <li> 
                 <a href="cadastro_estoque.php">
-                    <i class='bx bxs-cart-download' ></i></i>                <span class="links_name">Cadastro Estoque</span>
+                    <i class='bx bxs-cart-download' ></i></i>                <span class="links_name">Cadastro de Estoque</span>
                 </a>
                 <span id="cadlinha" class="tooltip">Cadastro de Estoque</span>
              </li>          <li>
