--- a/telastcc/navbar.html
+++ b/telastcc/navbar.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<!-- jQuery library -->
-	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
 	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script> -->
 	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 <style>
 	body{
-		all: unset;
-		background-color: #72cdfe;
+		
+		background-color: #73D2DE;
+        font-family: 'Poppins';
 	}
 </style>
 </head>
@@ -52,6 +54,12 @@
                 </a>
                 <span class="tooltip">Cadastro de Idosos</span>
             </li>            <li>
+                <a href="dado_remed.php">
+                    <i class='bx bx-capsule'></i>
+                <span id="cadremed" class="links_name">Medicamentos</span>
+                </a>
+                <span id="cadlinha" class="tooltip">Medicamentos</span>
+            </li>   <li>
                 <a href="cadastro_remed.php">
                     <i class='bx bxs-capsule'></i>
                 <span id="cadremed" class="links_name">Cadastro de Medicamentos</span>
