--- a/telastcc/navbar.html
+++ b/telastcc/navbar.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<!-- jQuery library -->
-	<!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
-	<!-- Popper JS -->
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script> -->
-	<!-- Latest compiled JavaScript -->
-	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+    <!-- jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <style>
-	body{
-		
-		background-color: #73D2DE;
+    body{
+        
+        background-color: #CAF0F8;
         font-family: 'Poppins';
-	}
+    }
 </style>
 </head>
 <body>
@@ -94,7 +94,7 @@
         <div class="profile_content">
             <div class="profile">
                 <div class="profile_details">
-                   <img src="img/fundo.jpg" alt=""></div>
+                   <img src="img/novologo.png" alt=""></div>
                    <a href="login.php">
                 <i class='bx bx-log-out' id="log_out"></i></a>
             </div>
