--- a/telastcc/navbar.html
+++ b/telastcc/navbar.html
@@ -91,7 +91,7 @@
             <div class="profile">
                 <div class="profile_details">
                    <img src="img/novologo.png" alt=""></div>
-                   <a href="login.php">
+                   <a href="sessao.php?logout=1">
                 <i class='bx bx-log-out' id="log_out"></i></a>
             </div>
         </div>
